# KidsToVibeCoding

./: .env  .flake8  .gitignore  .impeccable.md  .ralphrc  docker-compose.yml  pyproject.toml
.ralph/: .circuit_breaker_state  .claude_session_id  .exit_signals  .ralph_session  .ralph_session_history  .response_analysis  @fix_plan.md  AGENT.md  PROMPT.md  progress.json  status.json
docs/plans/: 2026-04-01-architecture-design.md  2026-04-01-implementation-plan.md
frontend/: README.md  metadata.json  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: TopNav.tsx  UI.tsx
frontend/src/store/: useUserStore.tsx
frontend/src/views/: ClassroomView.tsx  DashboardView.tsx  ExplorerView.tsx  GalleryView.tsx  LandingView.tsx  OnboardingView.tsx  SummonView.tsx
services/ai-assistant/: pyproject.toml  requirements.txt
services/ai-assistant/app/: main.py
services/gateway/: pyproject.toml  requirements.txt
services/gateway/app/: __init__.py  config.py  main.py
services/gateway/app/middleware/: auth.py  rate_limit.py
services/gateway/app/routes/: __init__.py  proxy.py  websocket.py
services/learning/: pyproject.toml  requirements.txt
services/learning/app/: main.py
services/multimodal/: pyproject.toml  requirements.txt
services/multimodal/app/: main.py
services/sandbox/: pyproject.toml  requirements.txt
services/sandbox/app/: main.py
services/user/: alembic.ini  pyproject.toml  requirements.txt
services/user/alembic/: env.py
services/user/alembic/versions/: 001_initial.py
services/user/app/: __init__.py  main.py  models.py
services/user/app/api/: __init__.py  auth.py
services/user/app/core/: __init__.py  config.py  database.py  redis_client.py
services/user/app/schemas/: __init__.py  auth.py
services/user/app/utils/: __init__.py  jwt_handler.py  password_handler.py
services/user/migrations/: env.py  init.sql
services/user/migrations/versions/: 001_init_user_tables.py  001_initial.py
shared/: __init__.py  health.py  logger.py  logging_config.py  requirements.txt
shared/db/init/: 001_init_schema.sql
shared/health/: __init__.py
shared/logging/: __init__.py  config.py
项目文档/: DESIGN.md  PRD.md  ai-chat.html  community.html  index.html  learning-path.html  lesson.html  profile.html  register.html  workspace.html  产品设计.md  页面布局.md
