[project]
name = "learning-service"
version = "0.1.0"
description = "Learning Service - 课程管理、学习路径、进度追踪"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.12.0",
    "redis>=5.0.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
