[project]
name = "sandbox-service"
version = "0.1.0"
description = "Sandbox Service - 代码执行、容器管理"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "docker>=7.0.0",
    "websockets>=12.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
